next
----
-bsml2chado: Adding <state> element to cache primary keys step in bsml2chado.xml
-PFunc: Bug fixes and minor improvements and update to component files
-tRNAscan-SE: now allows no search type to be specified, in order to invoke the default search type of 'eukaryotic'
-split_fasta: corrected problem with duplicates in the output list
-genemark-es: new component
-tmhmm2bsml: changed Seq-data-import[@id] value to ensure id does not start with numbers.
-genbank2bsml: Changing Feature/Attribute@name="gene_symbol" instead of "gene" to agree with gff2bsml and prok pipeline
-xdformat: added default option: -k ignore (skip) any invalid letter codes in the FASTA input
-hmmls: New component.
-fuzznuc: New component.
-wu-blast2bsml: Added parameter filter_hsps_for_stats which will use only HSPs that contribute to the best Sum(P) when calculating Seq-pair-alignment %identity/coverage/similarity values.
chado2bsml: Added --databaselist parameter so a list of databases can be passed in.
-hmmpfam: Added molecule type parameters. Added option to skip htab generation.
-HmmTools.pm: changes to parsing for use with LDHmmer v1.5.4
-pangenome_do_analysis.pl: Removed this script as it's functionality has been rolled into pangenome_make_table and pangenome_blast_parse.
-pangenome_blast_parse.pl: Fixed a major bug where the coverage parameter from the last HSP was being used for the entire hit. Now it uses the value attached to the Seq-pair-alignment for coverage and similarity.
-pathway_tools_input: added compoonent to generate pathway tools input files from a chado database
-Pfunc [annotation_collection_to_bsml]: will now print different parent molecules to different output bsml files
-pipeline_summary: Reduced runtime and will now order loci based on end3 (within one molecule)
--celera-assembler: New component.
--velvet: New component.
--elph: New component.

ergatis-v2r11b1
---------------
-fixed pipeline layout save warning error